bpo-27805: Allow opening /dev/std{out,err} in append mode

For example, open('/dev/stdout', 'a') will no longer raise an OSError.